# polarion-requirements-inspector-service

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml  renovate.json  sonar-project.properties  tox.ini
.github/workflows/: ci.yml  claude-code-review.yml  pr.yml
app/: constants.py  requirements_inspector_controller.py  requirements_inspector_service.py  type_definitions.py
tests/: run.py  test_container.py  test_controller.py  test_service.py
tests/shell/: test_dockerfile.sh
