[project]
name = "polarion-requirements-inspector-service"
version = "0.0.0"  # the version is controlled by pipeline
description = "Service for python_requirements_inspector"
authors = [
    {name = "SBB Polarion Team", email = "polarion-opensource@sbb.ch"},
]
license = "Apache License 2.0"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "python-requirements-inspector @ https://github.com/SchweizerischeBundesbahnen/python-requirements-inspector/releases/download/4.0.0/python_requirements_inspector-4.0.0-py3-none-any.whl",
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
]
# Note that murmuhash (1.0.10) and cymem (2.0.8) are dependencies of python-requirements-inspector. The GitHub action docker/build-push-action might fail with versions 1.0.11 and 2.0.10 respectively.

[tool.poetry]
packages = [{include = "app"}]
requires-poetry = ">=2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.2.0"
ruff = "0.12.0"
mypy = "1.16.1"

[tool.poetry.group.test.dependencies]
tox = "4.27.0"
coverage = "7.9.1"
pytest = "8.4.0"
docker = "7.1.0"
httpx = "0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 240
fix = true
show-fixes = true

[tool.ruff.lint]
extend-select = [
    # --- Recommended ---
    "E", "W", # pycodestyle errors and warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "C90",    # mccabe
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "PL",     # Pylint
    "PTH",    # flake8-pathlib
    "TCH",    # type-checking imports
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "ERA",    # eradicate
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # No assert rule (bandit)
    "PLR2004" # No magic values (pylint)
]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
explicit_package_bases = true
disallow_untyped_defs = true
exclude = "tests/.*"
