[project]
name = "polarion-requirements-inspector-service"
version = "0.0.0"  # the version is controlled by pipeline
description = "Service for python_requirements_inspector"
authors = [
    {name = "SBB Polarion Team", email = "polarion-opensource@sbb.ch"},
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "python-requirements-inspector @ https://github.com/SchweizerischeBundesbahnen/python-requirements-inspector/releases/download/4.1.0/python_requirements_inspector-4.1.0-py3-none-any.whl",
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "ruff==0.15.2",
    "mypy==1.19.1",
]
test = [
    "tox==4.44.0",
    # for debug source code for pytest --> see tox.ini section [testenv]
    "docker==7.1.0",
    "pytest==9.0.2",
    "httpx==0.28.1",
    "coverage==7.13.4",
]

[tool.uv]
# Set to false because this project is an application, not a library
package = false
override-dependencies = [
    "numpy>=1.25,<2.0"  # Compatible with spacy 3.7.5 and thinc 8.2.4
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 240
fix = true
show-fixes = true
exclude = [
    "tests/*"  # Exclude all test files from linting
]

[tool.ruff.lint]
extend-select = [
    # --- Recommended ---
    "E", "W", # pycodestyle errors and warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "C90",    # mccabe
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "PL",     # Pylint
    "PTH",    # flake8-pathlib
    "TCH",    # type-checking imports
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "ERA",    # eradicate
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", # No assert rule (bandit)
    "PLR2004", # No magic values (pylint)
]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
explicit_package_bases = true
disallow_untyped_defs = true
exclude = "tests/.*"
install_types = true
non_interactive = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
